--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,1 +1,9 @@
 @import "bootstrap";
+
+@import url(https://fonts.googleapis.com/css?family=Amatic+SC:400);
+
+.title{
+    text-align: center;
+    font-family: 'Amatic SC', cursive;
+    font-size: 52pt;
+}
