--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5827,4 +5827,9 @@ button.close {
   font-family: 'Amatic SC', cursive;
   font-size: 52pt; }
 
+.loginuser {
+  text-align: center;
+  font-family: 'Amatic SC', cursive;
+  font-size: 36pt; }
+
 /*# sourceMappingURL=style.css.map */
