--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -7,3 +7,9 @@
     font-family: 'Amatic SC', cursive;
     font-size: 52pt;
 }
+
+.loginuser{
+    text-align: center;
+    font-family: 'Amatic SC', cursive;
+    font-size: 36pt;
+}
