--- a/views/index.jade
+++ b/views/index.jade
@@ -1,10 +1,12 @@
 extends layout
 
 block content
-    h1.title= title
+    a(href="/login" style="float:right;")
+        button.btn.btn-success Sign In
+    h2.loginuser!= currentUser
     
     .container.col-sm-12
-        .container.col-sm-10.col-sm-offset-1
+        .container.col-sm-12
             .row
                 .col-xs-12
                     .input-group
@@ -23,5 +25,5 @@ block content
                         span.input-group-addon
                             span.glyphicon.glyphicon-align-justify
                         input.form-control.text-center(type="text" placeholder="Con 1")
-        .container.col-sm-1.col-xs-12.text-center
-            span.glyphicon.glyphicon-plus.form-control-static
+    .container.col-sm-1.col-xs-12.text-center
+        span.glyphicon.glyphicon-plus.form-control-static
