--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,5 +8,6 @@ html(lang="en")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     .container-fluid
-      block content
+        h1.title JuxtaPros 2
+        block content
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js")
