--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,8 +6,9 @@ html(lang="en")
     meta(name="viewport" content="width=device-width, initial-scale=1")
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css')
   body
     .container-fluid
         h1.title JuxtaPros 2
         block content
-    script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js")
+    //- script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js")
